--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,19 @@
   <!DOCTYPE html>
   <html lang="en">
   <head>
+    <style>
+      .fade-content {
+        opacity: 0;
+        transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
+      }
+      .fade-content.visible {
+        opacity: 1;
+      }
+      .fade-content.fade-out {
+        opacity: 0 !important;
+        transition: opacity 0.4s cubic-bezier(.4,0,.2,1);
+      }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videos | Dakota's Music World</title>
@@ -171,21 +184,54 @@
     </style>
   </head>
   <body>
-    <div class="bg-img-container">
-      <img src="concertbackground.png" class="bg-img" alt="Dakota's Music World Concert Collection VHS" />
+    <script>
+      // Fade in on load
+      document.addEventListener('DOMContentLoaded', function() {
+        var fade = document.querySelector('.fade-content');
+        if (fade) {
+          setTimeout(function() {
+            fade.classList.add('visible');
+          }, 10);
+        }
+        // Fade out on navigation
+        document.querySelectorAll('a').forEach(function(link) {
+          var href = link.getAttribute('href');
+          if (href && !href.startsWith('#') && !link.hasAttribute('target')) {
+            link.addEventListener('click', function(e) {
+              // Only fade if local navigation
+              if (link.hostname === location.hostname || href.startsWith('/')) {
+                var fade = document.querySelector('.fade-content');
+                if (fade) {
+                  e.preventDefault();
+                  fade.classList.remove('visible');
+                  fade.classList.add('fade-out');
+                  setTimeout(function() {
+                    window.location = link.href;
+                  }, 400);
+                }
+              }
+            });
+          }
+        });
+      });
+    </script>
+    <div class="fade-content">
+      <div class="bg-img-container">
+        <img src="concertbackground.png" class="bg-img" alt="Dakota's Music World Concert Collection VHS" />
+      </div>
+      <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
+      <div class="photos-hero">
+        <!-- Hotspot: Concert Video (Live Recordings) -->
+        <!-- Add your videos content here -->
+      </div>
+      <nav class="bottom-bar">
+        <a href="/index.html">Home</a>
+        <a href="/photos.html">Photography</a>
+        <a href="/videos.html">Live Recordings</a>
+        <a href="/interviews.html">Interviews</a>
+        <a href="/contact.html">Contact</a>
+      </nav>
     </div>
-    <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
-    <div class="photos-hero">
-      <!-- Hotspot: Concert Video (Live Recordings) -->
-      <!-- Add your videos content here -->
-    </div>
-    <nav class="bottom-bar">
-      <a href="/index.html">Home</a>
-      <a href="/photos.html">Photography</a>
-      <a href="/videos.html">Live Recordings</a>
-      <a href="/interviews.html">Interviews</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
   </body>
   </html>
 
