--- a/index.html
+++ b/index.html
@@ -2,6 +2,100 @@
 <html lang="en">
 <head>
 	<style>
+		@media (max-width: 600px) {
+			.logo-link {
+				top: 2vw !important;
+				left: 0 !important;
+				width: 100% !important;
+				text-align: center !important;
+			}
+			.logo-img {
+				width: 38vw !important;
+				min-width: 80px !important;
+				max-width: 180px !important;
+			}
+			.bottom-bar {
+				display: none !important;
+			}
+			.mobile-nav {
+				display: block !important;
+			}
+		}
+		.mobile-nav {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 200;
+		}
+		.hamburger {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			width: 48px;
+			height: 48px;
+			background: rgba(56,69,31,0.82);
+			border: none;
+			border-radius: 8px;
+			margin: 10px 0 0 10px;
+			cursor: pointer;
+			z-index: 201;
+		}
+		.hamburger span {
+			display: block;
+			width: 28px;
+			height: 4px;
+			margin: 3px 0;
+			background: #f47a2c;
+			border-radius: 2px;
+			transition: 0.2s;
+		}
+		.mobile-menu {
+			display: block;
+			flex-direction: column;
+			position: absolute;
+			top: 56px;
+			left: 0;
+			width: 60vw;
+			min-width: 160px;
+			max-width: 240px;
+			background: rgba(56,69,31,0.98);
+			border-radius: 18px !important;
+			box-shadow: 0 4px 16px #0008;
+			padding: 2px 8px;
+			box-sizing: border-box;
+			z-index: 202;
+			max-height: 0;
+			overflow: hidden;
+			opacity: 0;
+			text-align: left;
+			transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
+		}
+		.mobile-menu.open {
+			display: flex;
+			max-height: 500px;
+			opacity: 1;
+			transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
+		}
+		.mobile-menu a {
+			color: #f47a2c;
+			text-decoration: none;
+			font-weight: 700;
+			padding: 8px 8px;
+			display: block;
+			font-size: 1.1em;
+			border-bottom: 1px solid #38451f;
+			text-align: left;
+		}
+		.mobile-menu a:last-child {
+			border-bottom: none;
+		}
+		.mobile-menu.open {
+			display: flex;
+		}
+	</style>
+	<style>
 		.fade-content {
 			opacity: 0;
 			transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
@@ -283,6 +377,36 @@
 </head>
 
 <body>
+	<div class="mobile-nav">
+		<button class="hamburger" aria-label="Open navigation menu">
+			<span></span><span></span><span></span>
+		</button>
+		<div class="mobile-menu">
+			<a href="/index.html">Home</a>
+			<a href="/photos.html">Photography</a>
+			<a href="/videos.html">Live Recordings</a>
+			<a href="/interviews.html">Interviews</a>
+			<a href="/contact.html">Contact</a>
+		</div>
+	</div>
+	<script>
+		// Hamburger menu toggle for mobile
+		document.addEventListener('DOMContentLoaded', function() {
+			var hamburger = document.querySelector('.hamburger');
+			var menu = document.querySelector('.mobile-menu');
+			if (hamburger && menu) {
+				hamburger.addEventListener('click', function() {
+					menu.classList.toggle('open');
+				});
+				// Optional: close menu when a link is clicked
+				menu.querySelectorAll('a').forEach(function(link) {
+					link.addEventListener('click', function() {
+						menu.classList.remove('open');
+					});
+				});
+			}
+		});
+	</script>
 	<script>
 		// Fade in on load
 		document.addEventListener('DOMContentLoaded', function() {
