--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 			.mobile-nav {
 				display: block !important;
 			}
+			.bg-img {
+				object-fit: contain !important;
+				width: 100vw !important;
+				height: 100vh !important;
+				min-width: 100vw !important;
+				min-height: 100vh !important;
+				max-width: 100vw !important;
+				max-height: 100vh !important;
+				object-position: center center !important;
+				background: #000 !important;
+			}
 		}
 		.mobile-nav {
 			display: none;
