Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+
+	<!-- Background image container -->
+	<div class="bg-img-container">
+		<img src="live/concertbackground.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background" />
+	</div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
