Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 	<div class="bg-img-container">
-		<img src="live/20250829_1648_Camera and Media Badge_remix_01k3vs9p0jfr7vyadgmzse2h63-Picsart-AiImageEnhancer.png" class="bg-img zoom-target" id="main-bg-img" alt="Mobile Home Background" />
+	<img src="live/mobile-home-bg.jpg" class="bg-img zoom-target" id="main-bg-img" alt="Mobile Home Background" />
 	</div>
 <!DOCTYPE html>
 <html lang="en">
